--- a/landingpage.html
+++ b/landingpage.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hotel booking</title>
+    <link rel="stylesheet" href="COMPONENTS/style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <body>
+<div id="container">
     <header class="header">
         <a href="#" id="logo"><img src="logo/bonz.ai-logo-color-landscape.png" alt=""></a>
         <nav class="navbar">
@@ -23,7 +25,13 @@
         </div>
 
     </header>
-<!-- background image -->
+
+ 
+
+    </div>
+
+
+    <!-- background image -->
 
     <div class="main__background">
         <div class="main__text">
@@ -34,9 +42,9 @@
     </div> 
     <!-- background image ended -->
 
-<!-- booking secton -->
-<div class="book__section">
-    <div class="inner__book">
+    <!-- booking secton -->
+    <div class="book__section">
+     <div class="inner__book">
         <input type="date" placeholder="Incheckning">
         <input type="date" placeholder="Utcheckning">
         <input type="text" placeholder="Rum">
@@ -46,11 +54,11 @@
         </div>
     </div>
     
-</div>
+    </div>
 <!-- booking secton ended -->
 
 
-<div class="about__us">
+    <div class="about__us">
     <h1>Om Oss</h1>
     <div class="main__hotel">
         <div class="about__photo">
@@ -89,14 +97,14 @@
         </div>
     </div>
     
-</div>
+    </div>
 
 
-<div class="bonzai__logo__bottom">
+    <div class="bonzai__logo__bottom">
     <img src="logo//bonz.ai-logo-color-portrait-full.png" alt="">
+    </div>
+
 </div>
-
-
     <script src="script.js"></script>
 </body>
 </html>
